[gd_scene load_steps=36 format=3 uid="uid://bn16pnjwue1je"]

[ext_resource type="Script" path="res://scripts/alien_ufo.gd" id="1_hp4kt"]
[ext_resource type="Texture2D" uid="uid://c5i1yd7uyqutb" path="res://assets/sprites/ufo/baby_ufo.png" id="2_qrmcs"]
[ext_resource type="PackedScene" uid="uid://ckx4aehxac0ot" path="res://effects/HitEffect.tscn" id="2_xknd0"]
[ext_resource type="Texture2D" uid="uid://c0ji2n0qlg2tp" path="res://assets/sprites/ufo/ufo.png" id="3_aql82"]
[ext_resource type="PackedScene" uid="uid://dvvfmp7gxpg8n" path="res://effects/DeathEffect.tscn" id="3_idbtg"]
[ext_resource type="AudioStream" uid="uid://d1cnjj2jguqhj" path="res://assets/sound/sfx/UFO_buzz.wav" id="3_r408j"]
[ext_resource type="Texture2D" uid="uid://c7cafes7o53b" path="res://assets/sprites/ufo/ufo_beam.png" id="4_g2dkd"]
[ext_resource type="Texture2D" uid="uid://blt3ed2ke4ft7" path="res://assets/sprites/ufo/baby_ufo_sad.png" id="5_ol6xd"]
[ext_resource type="AudioStream" uid="uid://3h8uktx7yiqo" path="res://assets/sound/sfx/UFO_beam_swirl.wav" id="5_yb6pp"]
[ext_resource type="AudioStream" uid="uid://c5q6t51gdcvgs" path="res://assets/sound/sfx/UFO_swoosh.wav" id="6_b5o76"]
[ext_resource type="Texture2D" uid="uid://bxu2ycoixq6e5" path="res://assets/sprites/ufo/baby_ufo_headphones.png.png" id="7_p5api"]
[ext_resource type="AudioStream" uid="uid://b6d0wggy1as67" path="res://assets/sound/JENNA MODE/jenna UFO hum.wav" id="7_w60r3"]
[ext_resource type="AudioStream" uid="uid://dx04sc7v1mqvt" path="res://assets/sound/JENNA MODE/jenna UFO swirl.wav" id="8_v58v1"]
[ext_resource type="AudioStream" uid="uid://chgo3irxmq654" path="res://assets/sound/JENNA MODE/jenna UFO whoosh.wav" id="9_hwefr"]
[ext_resource type="PackedScene" uid="uid://crdrlfwwcexfi" path="res://level2/Hurtbox.tscn" id="11_8282e"]
[ext_resource type="PackedScene" uid="uid://b7wxa66jcmnx2" path="res://level2/Hitbox.tscn" id="12_56oms"]
[ext_resource type="PackedScene" uid="uid://d1y15vdrvtuul" path="res://level2/EntityHealthbar.tscn" id="13_xx88j"]
[ext_resource type="AudioStream" uid="uid://d360pkd3hgbv5" path="res://assets/sound/sfx/metal thunk.wav" id="16_cj5qy"]
[ext_resource type="Texture2D" uid="uid://cc8bawglkbwtg" path="res://assets/textures/exclamation.png" id="18_gujks"]
[ext_resource type="AudioStream" uid="uid://djxygndl5wfw0" path="res://assets/sound/sfx/emotion.wav" id="19_acusf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tbtqw"]
atlas = ExtResource("2_qrmcs")
region = Rect2(0, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_l23kj"]
atlas = ExtResource("2_qrmcs")
region = Rect2(130, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2lcn"]
atlas = ExtResource("5_ol6xd")
region = Rect2(0, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_8opmh"]
atlas = ExtResource("5_ol6xd")
region = Rect2(130, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilg1w"]
atlas = ExtResource("3_aql82")
region = Rect2(0, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_qreu2"]
atlas = ExtResource("3_aql82")
region = Rect2(130, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieu6g"]
atlas = ExtResource("7_p5api")
region = Rect2(0, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_1auiv"]
atlas = ExtResource("7_p5api")
region = Rect2(130, 0, 130, 130)

[sub_resource type="SpriteFrames" id="SpriteFrames_1d1lp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbtqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l23kj")
}],
"loop": true,
"name": &"baby",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2lcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8opmh")
}],
"loop": true,
"name": &"baby_sad",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilg1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qreu2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieu6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1auiv")
}],
"loop": true,
"name": &"headphones_baby",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_hj2v3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UfoBeam:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.858824)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UfoBeam:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8.29231, 8.49231)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UfoBeam:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UfoBeam:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-11.9999, 344)]
}

[sub_resource type="Animation" id="Animation_l716y"]
resource_name = "show_beam"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UfoBeam:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.858824)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UfoBeam:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.962676),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(5.15385, 3.86154), Vector2(8.29231, 8.49231)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UfoBeam:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.962676),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-5, 191), Vector2(-10, 352)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UfoBeam:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7le2t"]
resource_name = "stop_beam"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UfoBeam:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UfoBeam:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.858824), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UfoBeam:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(8.27469, 8.492), Vector2(5.154, 3.862)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UfoBeam:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-5, 352), Vector2(-5, 191)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a1ifr"]
_data = {
"RESET": SubResource("Animation_hj2v3"),
"show_beam": SubResource("Animation_l716y"),
"stop_beam": SubResource("Animation_7le2t")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ksn5h"]
radius = 86.0
height = 200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vnbj3"]
radius = 64.0078

[node name="AlienUFO" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_hp4kt")
EFFECT_HIT = ExtResource("2_xknd0")
EFFECT_DIED = ExtResource("3_idbtg")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, 328.094)
scale = Vector2(7.04615, 7.12452)
sprite_frames = SubResource("SpriteFrames_1d1lp")
animation = &"headphones_baby"

[node name="UfoBeam" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.858824)
position = Vector2(-11.9999, 344)
scale = Vector2(8.29231, 8.49231)
texture = ExtResource("4_g2dkd")

[node name="Area2D" type="Area2D" parent="UfoBeam"]
position = Vector2(0.12085, -3.76825)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="UfoBeam/Area2D"]
position = Vector2(2.00785, 7.88978)
scale = Vector2(0.934223, 1)
polygon = PackedVector2Array(-5.63479, -37.6813, -16.7707, 19.7825, 17.3422, 19.6647, 4.4338, -37.4458)

[node name="Buzz" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_r408j")
volume_db = 9.258
bus = &"Sfx"

[node name="Swirl" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_yb6pp")
volume_db = 24.0
bus = &"Sfx"

[node name="Whoosh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_b5o76")
volume_db = 19.209
bus = &"Sfx"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a1ifr")
}

[node name="JENNA_Buzz" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_w60r3")
bus = &"JENNA MODE"

[node name="JENNA_Swirl" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_v58v1")
volume_db = 24.0
bus = &"JENNA MODE"

[node name="JENNA_Whoosh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_hwefr")
volume_db = 20.0
bus = &"JENNA MODE"

[node name="Hurtbox" parent="." instance=ExtResource("11_8282e")]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-4, 12)
shape = SubResource("CapsuleShape2D_ksn5h")

[node name="Hitbox" parent="." instance=ExtResource("12_56oms")]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-3, 24)
shape = SubResource("CircleShape2D_vnbj3")

[node name="EntityHealthbar" parent="." instance=ExtResource("13_xx88j")]
offset_left = -96.0
offset_top = -153.0
offset_right = -56.0
offset_bottom = -113.0
scale = Vector2(6, 4.286)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Metal" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_cj5qy")
volume_db = 9.713

[node name="Exclamation" type="Sprite2D" parent="."]
visible = false
position = Vector2(2, -118)
texture = ExtResource("18_gujks")

[node name="EmotionIndicator" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_acusf")
volume_db = 8.819

[connection signal="died" from="." to="." method="die"]
[connection signal="body_entered" from="UfoBeam/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
